--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,12 @@ dependencies:
   
   clipboard: 0.1.3
   tonic: 0.2.3
-  flutter_launcher_icons: 0.9.0
   sheet_music: 0.3.0
+  get: 4.1.4
+  flutter_neumorphic: 3.1.0
+  waterfall_flow: 3.0.1
+  responsive_scaffold: 1.3.0+2
+  cloud_firestore: 2.1.0
 
 flutter_icons:
   android: "launcher_icon"
