--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,10 @@ dependencies:
   tonic: 0.2.3
   sheet_music: 0.3.0
   get: 4.1.4
-  flutter_neumorphic: 3.1.0
-  waterfall_flow: 3.0.1
-  responsive_scaffold: 1.3.0+2
-  cloud_firestore: 2.1.0
+  flutter_neumorphic: 3.0.3
+  lazy_load_scrollview: 1.3.0
+  sizer: 2.0.13
+  get_storage: 2.0.2
 
 flutter_icons:
   android: "launcher_icon"
